Fix deprecated wrapper constructor warnings
Replace deprecated new Integer(), new Boolean(), new Character(), new Double(),
new Float(), new Long(), and new Byte() constructors with their corresponding
valueOf() methods across the codebase.

This modernization reduces compilation warnings from 41 to 9 and improves
performance by utilizing Integer/Boolean/etc. caching mechanisms introduced
in newer Java versions.

Files updated:
- Props.java: Boolean, Integer, Character, Double, Float, Long constructors
- HTMLFormWriter.java: Integer constructor in toString conversion
- CookiePropsContainer.java: Boolean constructor
- jGrep.java: Integer constructor
- IntegerPair.java: Integer constructors (already fixed)
- Base64Encoding.java: Byte constructors (already using valueOf)
- BinaryHeap.java: Integer constructors in heap operations
- VectorPropsContainer.java: Integer and Boolean constructors
- AgentTableModel.java: Boolean and Integer constructors
- ReceivePOP3EmailAgent.java: Integer constructors in Pair objects

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>